--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
 
             <br>
             <section id="Introduction">
-                <img id="alert" src="statistic.png" class="introductionPictures"> 
+                <img id="alert" src="statistic.jpg" class="introductionPictures"> 
                 <!--Image found at https://www.google.com/url?sa=i&url=http%3A%2F%2Fwww.williamfarr.lincs.sch.uk%2Fnews%2Fbbc-news-report-2018%2Fis-mental-health-becoming-a-serious-issue-in-exam-students&psig=AOvVaw0RNtJYYQbGjAfKSsU968RM&ust=1666454179287000&source=images&cd=vfe&ved=2ahUKEwjR3rLc1_H6AhUnxYUKHQBcDUkQr4kDegUIARCzAQ, accessed at (21/10/22)-->
                 <img src="detoritation.jpg" class="introductionPictures"> 
                 <!--Image found at https://www.google.com/url?sa=i&url=https%3A%2F%2Fdigital.nhs.uk%2Fnews%2F2021%2Frate-of-mental-disorders-among-children-remained-stable-in-2021-after-previous-rise-report-shows&psig=AOvVaw2NMmUb5RDq_bSl7eNzQyJ8&ust=1666454109883000&source=images&cd=vfe&ved=0CA0QjhxqFwoTCIDg1rzX8foCFQAAAAAdAAAAABAE accessed at (21/10/22)-->
